@@ -17,7 +17,6 @@ import org.elasticsearch.cluster.SnapshotsInProgress.Entry;
 import org.elasticsearch.cluster.SnapshotsInProgress.ShardState;
 import org.elasticsearch.cluster.SnapshotsInProgress.State;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.unit.ByteSizeValue;
@@ -27,8 +26,8 @@ import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.ShardGeneration;
 import org.elasticsearch.repositories.ShardSnapshotResult;
-import org.elasticsearch.test.AbstractDiffableWireSerializationTestCase;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.SimpleDiffableWireSerializationTestCase;
 import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -47,20 +46,20 @@ import static org.elasticsearch.xcontent.XContentFactory.jsonBuilder;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.equalTo;
 
-public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireSerializationTestCase<Custom> {
+public class SnapshotsInProgressSerializationTests extends SimpleDiffableWireSerializationTestCase<Custom> {
 
     @Override
     protected Custom createTestInstance() {
         int numberOfSnapshots = randomInt(10);
         SnapshotsInProgress snapshotsInProgress = SnapshotsInProgress.EMPTY;
         for (int i = 0; i < numberOfSnapshots; i++) {
-            snapshotsInProgress.withAddedEntry(randomSnapshot());
+            snapshotsInProgress = snapshotsInProgress.withAddedEntry(randomSnapshot());
         }
         return snapshotsInProgress;
     }
 
     private Entry randomSnapshot() {
-        Snapshot snapshot = new Snapshot(randomAlphaOfLength(10), new SnapshotId(randomAlphaOfLength(10), randomAlphaOfLength(10)));
+        Snapshot snapshot = new Snapshot("repo-" + randomInt(5), new SnapshotId(randomAlphaOfLength(10), randomAlphaOfLength(10)));
         boolean includeGlobalState = randomBoolean();
         boolean partial = randomBoolean();
         int numberOfIndices = randomIntBetween(0, 10);
@@ -71,21 +70,17 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         }
         long startTime = randomLong();
         long repositoryStateId = randomLong();
-        ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder();
-        final List<Index> esIndices = indices.keySet()
-            .stream()
-            .map(i -> new Index(i, randomAlphaOfLength(10)))
-            .collect(Collectors.toList());
+        Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>();
+        final List<Index> esIndices = indices.keySet().stream().map(i -> new Index(i, randomAlphaOfLength(10))).toList();
         List<String> dataStreams = Arrays.asList(generateRandomStringArray(10, 10, false));
         for (Index idx : esIndices) {
             int shardsCount = randomIntBetween(1, 10);
             for (int j = 0; j < shardsCount; j++) {
-                builder.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                shards.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
             }
         }
         List<SnapshotFeatureInfo> featureStates = randomList(5, SnapshotFeatureInfoTests::randomSnapshotFeatureInfo);
-        ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = builder.build();
-        return new Entry(
+        return Entry.snapshot(
             snapshot,
             includeGlobalState,
             partial,
@@ -148,12 +143,15 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         if (randomBoolean()) {
             // modify some elements
             for (List<Entry> perRepoEntries : updatedInstance.entriesByRepo()) {
-                final List<Entry> entries = new ArrayList<>(perRepoEntries);
+                List<Entry> entries = new ArrayList<>(perRepoEntries);
                 for (int i = 0; i < entries.size(); i++) {
                     if (randomBoolean()) {
                         final Entry entry = entries.get(i);
-                        entries.set(i, mutateEntry(entry));
+                        entries.set(i, mutateEntryWithLegalChange(entry));
                     }
+                }
+                if (randomBoolean()) {
+                    entries = shuffledList(entries);
                 }
                 updatedInstance = updatedInstance.withUpdatedEntriesForRepo(perRepoEntries.get(0).repository(), entries);
             }
@@ -192,10 +190,10 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
     }
 
     private Entry mutateEntry(Entry entry) {
-        switch (randomInt(8)) {
+        switch (randomInt(5)) {
             case 0 -> {
                 boolean includeGlobalState = entry.includeGlobalState() == false;
-                return new Entry(
+                return Entry.snapshot(
                     entry.snapshot(),
                     includeGlobalState,
                     entry.partial(),
@@ -213,7 +211,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
             }
             case 1 -> {
                 boolean partial = entry.partial() == false;
-                return new Entry(
+                return Entry.snapshot(
                     entry.snapshot(),
                     entry.includeGlobalState(),
                     partial,
@@ -230,27 +228,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                 );
             }
             case 2 -> {
-                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10)))
-                    .collect(Collectors.toList());
-                return new Entry(
-                    entry.snapshot(),
-                    entry.includeGlobalState(),
-                    entry.partial(),
-                    entry.state(),
-                    entry.indices(),
-                    dataStreams,
-                    entry.featureStates(),
-                    entry.startTime(),
-                    entry.repositoryStateId(),
-                    entry.shards(),
-                    entry.failure(),
-                    entry.userMetadata(),
-                    entry.version()
-                );
-            }
-            case 3 -> {
                 long startTime = randomValueOtherThan(entry.startTime(), ESTestCase::randomLong);
-                return new Entry(
+                return Entry.snapshot(
                     entry.snapshot(),
                     entry.includeGlobalState(),
                     entry.partial(),
@@ -266,71 +245,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.version()
                 );
             }
-            case 4 -> {
-                long repositoryStateId = randomValueOtherThan(entry.startTime(), ESTestCase::randomLong);
-                return new Entry(
-                    entry.snapshot(),
-                    entry.includeGlobalState(),
-                    entry.partial(),
-                    entry.state(),
-                    entry.indices(),
-                    entry.dataStreams(),
-                    entry.featureStates(),
-                    entry.startTime(),
-                    repositoryStateId,
-                    entry.shards(),
-                    entry.failure(),
-                    entry.userMetadata(),
-                    entry.version()
-                );
-            }
-            case 5 -> {
-                String failure = randomValueOtherThan(entry.failure(), () -> randomAlphaOfLengthBetween(2, 10));
-                return new Entry(
-                    entry.snapshot(),
-                    entry.includeGlobalState(),
-                    entry.partial(),
-                    entry.state(),
-                    entry.indices(),
-                    entry.dataStreams(),
-                    entry.featureStates(),
-                    entry.startTime(),
-                    entry.repositoryStateId(),
-                    entry.shards(),
-                    failure,
-                    entry.userMetadata(),
-                    entry.version()
-                );
-            }
-            case 6 -> {
-                Map<String, IndexId> indices = new HashMap<>(entry.indices());
-                ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = entry.shards();
-                IndexId indexId = new IndexId(randomAlphaOfLength(10), randomAlphaOfLength(10));
-                indices.put(indexId.getName(), indexId);
-                ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder(shards);
-                Index index = new Index(indexId.getName(), randomAlphaOfLength(10));
-                int shardsCount = randomIntBetween(1, 10);
-                for (int j = 0; j < shardsCount; j++) {
-                    builder.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
-                }
-                shards = builder.build();
-                return new Entry(
-                    entry.snapshot(),
-                    entry.includeGlobalState(),
-                    entry.partial(),
-                    randomState(shards),
-                    indices,
-                    entry.dataStreams(),
-                    entry.featureStates(),
-                    entry.startTime(),
-                    entry.repositoryStateId(),
-                    shards,
-                    entry.failure(),
-                    entry.userMetadata(),
-                    entry.version()
-                );
-            }
-            case 7 -> {
+            case 3 -> {
                 Map<String, Object> userMetadata = entry.userMetadata() != null ? new HashMap<>(entry.userMetadata()) : new HashMap<>();
                 String key = randomAlphaOfLengthBetween(2, 10);
                 if (userMetadata.containsKey(key)) {
@@ -338,7 +253,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                 } else {
                     userMetadata.put(key, randomAlphaOfLengthBetween(2, 10));
                 }
-                return new Entry(
+                return Entry.snapshot(
                     entry.snapshot(),
                     entry.includeGlobalState(),
                     entry.partial(),
@@ -354,13 +269,13 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.version()
                 );
             }
-            case 8 -> {
+            case 4 -> {
                 List<SnapshotFeatureInfo> featureStates = randomList(
                     1,
                     5,
                     () -> randomValueOtherThanMany(entry.featureStates()::contains, SnapshotFeatureInfoTests::randomSnapshotFeatureInfo)
                 );
-                return new Entry(
+                return Entry.snapshot(
                     entry.snapshot(),
                     entry.includeGlobalState(),
                     entry.partial(),
@@ -376,6 +291,96 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.version()
                 );
             }
+            case 5 -> {
+                return mutateEntryWithLegalChange(entry);
+            }
+            default -> throw new IllegalArgumentException("invalid randomization case");
+        }
+    }
+
+    // mutates an entry with a change that could occur as part of a cluster state update and is thus diffable
+    private Entry mutateEntryWithLegalChange(Entry entry) {
+        switch (randomInt(3)) {
+            case 0 -> {
+                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10))).toList();
+                return Entry.snapshot(
+                    entry.snapshot(),
+                    entry.includeGlobalState(),
+                    entry.partial(),
+                    entry.state(),
+                    entry.indices(),
+                    dataStreams,
+                    entry.featureStates(),
+                    entry.startTime(),
+                    entry.repositoryStateId(),
+                    entry.shards(),
+                    entry.failure(),
+                    entry.userMetadata(),
+                    entry.version()
+                );
+            }
+            case 1 -> {
+                long repositoryStateId = randomValueOtherThan(entry.repositoryStateId(), ESTestCase::randomLong);
+                return Entry.snapshot(
+                    entry.snapshot(),
+                    entry.includeGlobalState(),
+                    entry.partial(),
+                    entry.state(),
+                    entry.indices(),
+                    entry.dataStreams(),
+                    entry.featureStates(),
+                    entry.startTime(),
+                    repositoryStateId,
+                    entry.shards(),
+                    entry.failure(),
+                    entry.userMetadata(),
+                    entry.version()
+                );
+            }
+            case 2 -> {
+                String failure = randomValueOtherThan(entry.failure(), () -> randomAlphaOfLengthBetween(2, 10));
+                return Entry.snapshot(
+                    entry.snapshot(),
+                    entry.includeGlobalState(),
+                    entry.partial(),
+                    entry.state(),
+                    entry.indices(),
+                    entry.dataStreams(),
+                    entry.featureStates(),
+                    entry.startTime(),
+                    entry.repositoryStateId(),
+                    entry.shards(),
+                    failure,
+                    entry.userMetadata(),
+                    entry.version()
+                );
+            }
+            case 3 -> {
+                Map<String, IndexId> indices = new HashMap<>(entry.indices());
+                IndexId indexId = new IndexId(randomAlphaOfLength(10), randomAlphaOfLength(10));
+                indices.put(indexId.getName(), indexId);
+                Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>(entry.shards());
+                Index index = new Index(indexId.getName(), randomAlphaOfLength(10));
+                int shardsCount = randomIntBetween(1, 10);
+                for (int j = 0; j < shardsCount; j++) {
+                    shards.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                }
+                return Entry.snapshot(
+                    entry.snapshot(),
+                    entry.includeGlobalState(),
+                    entry.partial(),
+                    randomState(shards),
+                    indices,
+                    entry.dataStreams(),
+                    entry.featureStates(),
+                    entry.startTime(),
+                    entry.repositoryStateId(),
+                    shards,
+                    entry.failure(),
+                    entry.userMetadata(),
+                    entry.version()
+                );
+            }
             default -> throw new IllegalArgumentException("invalid randomization case");
         }
     }
@@ -383,7 +388,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
     public void testXContent() throws IOException {
         final IndexId indexId = new IndexId("index", "uuid");
         SnapshotsInProgress sip = SnapshotsInProgress.EMPTY.withAddedEntry(
-            new Entry(
+            Entry.snapshot(
                 new Snapshot("repo", new SnapshotId("name", "uuid")),
                 true,
                 true,
@@ -393,24 +398,20 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                 Collections.emptyList(),
                 1234567,
                 0,
-                ImmutableOpenMap.<ShardId, SnapshotsInProgress.ShardSnapshotStatus>builder()
-                    .fPut(
-                        new ShardId("index", "uuid", 0),
-                        SnapshotsInProgress.ShardSnapshotStatus.success(
-                            "nodeId",
-                            new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
-                        )
+                Map.of(
+                    new ShardId("index", "uuid", 0),
+                    SnapshotsInProgress.ShardSnapshotStatus.success(
+                        "nodeId",
+                        new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
+                    ),
+                    new ShardId("index", "uuid", 1),
+                    new SnapshotsInProgress.ShardSnapshotStatus(
+                        "nodeId",
+                        ShardState.FAILED,
+                        "failure-reason",
+                        new ShardGeneration("fail-gen")
                     )
-                    .fPut(
-                        new ShardId("index", "uuid", 1),
-                        new SnapshotsInProgress.ShardSnapshotStatus(
-                            "nodeId",
-                            ShardState.FAILED,
-                            "failure-reason",
-                            new ShardGeneration("fail-gen")
-                        )
-                    )
-                    .build(),
+                ),
                 null,
                 null,
                 Version.CURRENT
@@ -528,7 +529,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         }
     }
 
-    public static State randomState(ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
+    public static State randomState(Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
         return SnapshotsInProgress.completed(shards.values())
             ? randomFrom(State.SUCCESS, State.FAILED)
             : randomFrom(State.STARTED, State.INIT, State.ABORTED);
